--- a/index.html
+++ b/index.html
@@ -809,9 +809,9 @@
                     <figure class="effect">
                         <img src="images/project-13.jpg" alt="Desert Software" height="468"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>AEA Educational App</h3>
+                            <p>Features include display course info, calendar view, online submission, pdf file download, news update</p>
+                            <p><strong>Tags:</strong> <br />Design, prototype, wireframe</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_5"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
