--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <p>
                             <strong>Part-time - UI/UX Designer & Front-end Developer</strong>
                             <span class="hidden-phone">
-                                I did my first part-time job at a Chinese machinery company named Shengxiao. There I learned to apply my knowledge of HTML & CSS with a team to build the website. I was responsible for UI/UX design and part of the front-end development. It also involved with a lot of image editing work using Adobe Creative Suite.
+                                I did my first part-time job at a Chinese machinery company named Shengxiao. There I learned to apply my knowledge of HTML & CSS with a development team to build the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
