--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                         <figcaption>
                             <h3>Desert Software</h3>
                             <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap, jQuery</p>
                             <a href="https://www.desertsoftware.com.au" target="_blank">View more</a>
                             <span class="icon">
                                 <span><i class="fas fa-external-link-alt"></i></span>
