--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="images/mobileApp-1.jpg" class="d-block w-100" width="250" alt="...">
+                                            <img src="images/mobileApp-1.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="images/mobileApp-2.jpg" class="d-block w-100" alt="...">
@@ -1118,7 +1118,7 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="images/par-screenshot-1-small.jpg" class="d-block w-100" width="250" alt="...">
+                                            <img src="images/par-screenshot-1-small.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="images/par-screenshot-2-small.jpg" class="d-block w-100" alt="...">
@@ -1156,7 +1156,7 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="images/mobileApp-9.jpg" class="d-block w-100" width="250" alt="...">
+                                            <img src="images/mobileApp-9.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="images/mobileApp-10.jpg" class="d-block w-100" alt="...">
@@ -1194,7 +1194,7 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="images/mobileApp-15.jpg" class="d-block w-100" width="250" alt="...">
+                                            <img src="images/mobileApp-15.jpg" class="d-block w-100" alt="...">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="images/mobileApp-19.jpg" class="d-block w-100" alt="...">
