--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@
                         <img src="images/project-9.jpg" alt="Desert Software" height="320"/>
                         <figcaption>
                             <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <p>Integrated dashboard system communicating with OHS Apps that turn checklist into pdf file</p>
+                            <p><strong>Tags:</strong> <br />UI Design, Front-end, Bootstrap, JavaScript</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_1"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
@@ -820,7 +820,7 @@
                 </div>
                 <div class="col-md-3 col-sm-12 col-xs-12">
                     <figure class="effect">
-                        <img src="images/project-14.jpg" alt="Desert Software" height="468"/>
+                        <img src="images/par-screenshot-1-small.jpg" alt="Desert Software" height="468"/>
                         <figcaption>
                             <h3>OHS Integrated Management System</h3>
                             <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
