--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                         <img src="images/project-9.jpg" alt="Desert Software" height="320"/>
                         <figcaption>
                             <h3>OHS Integrated Management System</h3>
-                            <p>Integrated dashboard system communicating with OHS Apps that turn checklist into pdf file</p>
+                            <p>Integrated dashboard system communicating with OHS Apps that turn digital checklists into cloud pdf files</p>
                             <p><strong>Tags:</strong> <br />UI Design, Front-end, Bootstrap, JavaScript</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_1"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
@@ -766,9 +766,9 @@
                     <figure class="effect">
                         <img src="images/project-10.jpg" alt="Desert Software" height="320"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>PAR Dashboard System</h3>
+                            <p>PHP based dashboard system that communicates with PAR App to help registered pistol shooters manage their shooting records</p>
+                            <p><strong>Tags:</strong> <br />UI Design, Front-end, PHP, Bootstrap, jQuery</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_2"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
