--- a/index.html
+++ b/index.html
@@ -779,9 +779,9 @@
                     <figure class="effect">
                         <img src="images/project-11.jpg" alt="Desert Software" height="320"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>NDIS Audit Management System</h3>
+                            <p>Dashboard system that allows NDIS Service providers and auditors to complete the audit forms online and save securely</p>
+                            <p><strong>Tags:</strong> <br />UI Design, Prototype, Bootstrap, jQuery</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_3"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
@@ -792,9 +792,9 @@
                     <figure class="effect">
                         <img src="images/project-12.jpg" alt="Desert Software" height="320"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>AEA Student Management System</h3>
+                            <p>Dashboard system that connects with the AEA Educational app allowing registered students to view courses info and manage their file systems</p>
+                            <p><strong>Tags:</strong> <br />UI Design, Prototype, Bootstrap, jQuery</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_4"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
