--- a/index.html
+++ b/index.html
@@ -810,8 +810,8 @@
                         <img src="images/project-13.jpg" alt="Desert Software" height="468"/>
                         <figcaption>
                             <h3>AEA Educational App</h3>
-                            <p>Features include display course info, calendar view, online submission, pdf file download, news update</p>
-                            <p><strong>Tags:</strong> <br />Design, prototype, wireframe</p>
+                            <p>Features include display course info, calendar view, online submission, pdf file download and news update</p>
+                            <p><strong>Tags:</strong> <br />UI Design, prototype, wireframe</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_5"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
@@ -822,9 +822,9 @@
                     <figure class="effect">
                         <img src="images/par-screenshot-1-small.jpg" alt="Desert Software" height="468"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>Pistol Attendance Records</h3>
+                            <p>Features include shooting record management, firearm mangement and online submission with Electronic signatures</p>
+                            <p><strong>Tags:</strong> <br />UI Design, prototype, wireframe</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_6"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
@@ -835,9 +835,9 @@
                     <figure class="effect">
                         <img src="images/project-15.jpg" alt="Desert Software" height="468"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>OHS - Site Risk Assessment</h3>
+                            <p>Features include online submission with electronic signature, cloud calculation of OHS risk assessment</p>
+                            <p><strong>Tags:</strong> <br />UI Design, prototype, wireframe</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_7"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
@@ -848,9 +848,9 @@
                     <figure class="effect">
                         <img src="images/project-16.jpg" alt="Desert Software" height="468"/>
                         <figcaption>
-                            <h3>OHS Integrated Management System</h3>
-                            <p>Fully responsive modern webiste using HTML5, CSS3 & JavaScript with Bootstrap framework</p>
-                            <p><strong>Tags:</strong> <br />Design, Development, Bootstrap</p>
+                            <h3>MyPunter</h3>
+                            <p>Features include online payment, rss feed and social media content integrated</p>
+                            <p><strong>Tags:</strong> <br />UI Design, prototype, wireframe</p>
                             <span class="icon">
                                 <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_8"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
                             </span>
