--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <p>
                             <strong>Fulltime - UI/UX Designer & Web Developer & Graphics Designer</strong>
                             <span class="hidden-phone">
-                                Working as a designer & developer for web applications including CMS, integrated dashboard systems, WordPress/Bootstrap websites and App UI design such as prototype design, wireframe work and UI visual design. The web applications are PHP based using HTML, CSS and Javascript, the UI design utilizes Adobe Creative Suite and as a team we are working in a fully scrum way.
+                                In this startup software and web service company, I work as a designer & developer for web applications including CMS, integrated dashboard systems, WordPress/Bootstrap websites and App UI design such as prototype design, wireframe work and UI visual design. The web applications are PHP based using HTML, CSS and Javascript, the UI design utilizes Adobe Creative Suite and as a team we are working in a fully scrum way.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
