--- a/index.html
+++ b/index.html
@@ -832,7 +832,23 @@
                     </figure>
                 </div>
             </div>
-            
+            <hr />
+            <h3>Graphic Design</h3>
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <figure class="effect">
+                        <img src="images/portfolio-2.jpg" alt="Portfolio"/>
+                        <figcaption>
+                            <h3>Graphics Design & Logo / Brand Design</h3>
+                            <p>Company brochures & promotion flyer & Roll-up Banner & business card. Company brand logo and Apps icons. Company merchandise (T-shirt, hat, stationery…)</p>
+                            <p><strong>Tags:</strong> <br />Graphic Design, Adobe Suite</p>
+                            <span class="icon">
+                                <button type="button" class="btn btn-primary border-0" data-toggle="modal" data-target="#img_modal_9"><span style="padding: 5px"><i class="fas fa-external-link-alt"></i></span></button>
+                            </span>
+                        </figcaption> 
+                    </figure>
+                </div>
+            </div>
         </div>
 
         <div class="background-gray">
@@ -1184,6 +1200,24 @@
                                         </div>
                                         <div class="carousel-item">
                                             <img src="images/mobileApp-18.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade" id="img_modal_9" tabindex="-1" role="dialog" aria-labelledby="Portfolio" aria-hidden="true">
+                    <div class="modal-dialog modal-xl-customize">
+                        <div class="modal-content px-4 pt-4 pb-5">
+                            <div class="bd-example">
+                                <div id="portfolio" class="carousel slide" data-ride="carousel">
+                                    <ol class="carousel-indicators">
+                                        <li data-target="#portfolio" data-slide-to="0" class="active"></li>
+                                    </ol>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="images/portfolio-2.jpg" class="d-block w-100">
                                         </div>
                                     </div>
                                 </div>
