--- a/index.html
+++ b/index.html
@@ -216,16 +216,39 @@
                         <p>
                             <strong>Part-time - UI/UX Designer & Front-end Developer</strong>
                             <span class="hidden-phone">
-                                I did my first part-time job at a Chinese machinery company named Shengxiao. There I learned to apply my knowledge of HTML & CSS with a development team to build the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
+                                At Shengxiao I learned to apply my knowledge of HTML & CSS with a development team to design, build and maintain the website. I was responsible for UI/UX design and part of the front-end development. It also involved a lot of image editing work using Adobe Creative Suite.
                             </span>
                             <span class="experience-details">
                                 <span class="location">
-                                    <i class="fas fa-map-marker-alt mr-1"></i>Qingdao China
+                                    <i class="fas fa-map-marker-alt mr-1"></i>Qingdao China & Melbourne
                                 </span>
                                 <span class="seperator">|</span>
                                 <span class="link">
                                     <i class="fas fa-link mr-1"></i>
                                     <a href="http://www.ytshengxiao.cn" target="_blank">http://www.ytshengxiao.cn</a>
+                                </span>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="experiences">
+                <div class="experience row">
+                    <div class="col-md-4">
+                        <h4>Dami Technology</h4>
+                        <p class="experience-period">
+                            Sep 2013 - Jan 2015
+                        </p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Fulltime - Associate Web Developer</strong>
+                            <span class="hidden-phone">
+                                Effectively develop, and collaborate with others to develop, database-centric solutions within a distributed team of SQL, .NET and PHP developers. Successfully develop solutions associated with data migration of all the branch servers in a Microsoft SQL Server environment. Developed and maintained ASP.NET applications and databases by evaluating client needs.
+                            </span>
+                            <span class="experience-details">
+                                <span class="location">
+                                    <i class="fas fa-map-marker-alt mr-1"></i>Yantai China
                                 </span>
                             </span>
                         </p>
@@ -335,10 +358,6 @@
                                     <i class="fas fa-star"></i>
                                 </span>
                             </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="no-bullets">
                             <li>
                                 <span class="ability-title">Applications Redesign</span>
                                 <span class="ability-score">
@@ -349,6 +368,10 @@
                                     <i class="fas fa-star"></i>
                                 </span>
                             </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="no-bullets">
                             <li>
                                 <span class="ability-title">Product Design</span>
                                 <span class="ability-score">
@@ -376,6 +399,16 @@
                                     <i class="fas fa-star filled"></i>
                                     <i class="fas fa-star filled"></i>
                                     <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star"></i>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="ability-title">Javascript</span>
+                                <span class="ability-score">
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </span>
                             </li>
@@ -420,7 +453,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">Javascript</span>
+                                <span class="ability-title">.NET</span>
                                 <span class="ability-score">
                                     <i class="fas fa-star filled"></i>
                                     <i class="fas fa-star filled"></i>
