--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     </div>
                     <div class="col-md-8">
                         <p>
-                            <strong>Fulltime - Associate Web Developer</strong>
+                            <strong>Fulltime - Associate Software Developer</strong>
                             <span class="hidden-phone">
                                 Effectively develop, and collaborate with others to develop, database-centric solutions within a distributed team of SQL, .NET and PHP developers. Successfully develop solutions associated with data migration of all the branch servers in a Microsoft SQL Server environment. Developed and maintained ASP.NET applications and databases by evaluating client needs.
                             </span>
