--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             </span>
                             <span class="experience-details">
                                 <span class="location">
-                                    <i class="fas fa-map-marker-alt mr-1"></i>Qingdao China & Melbourne
+                                    <i class="fas fa-map-marker-alt mr-1"></i>Yantai China & Melbourne
                                 </span>
                                 <span class="seperator">|</span>
                                 <span class="link">
