--- a/PAR.html
+++ b/PAR.html
@@ -263,7 +263,7 @@
         </div>
         
         <div style="padding: 5rem 10rem">
-            <img src="images/PAR-lookbook@2x.jpg" class="mx-auto d-flex" style="max-width:80%; height: auto;border-top: 1px solid #ededed;border-bottom: 1px solid #ededed;">
+            <img src="images/PAR-Lookbook@2x.jpg" class="mx-auto d-flex" style="max-width:80%; height: auto;border-top: 1px solid #ededed;border-bottom: 1px solid #ededed;">
         </div>
         
         <div class="px-5 pt-5 fade">
