--- a/DesertSoftware.html
+++ b/DesertSoftware.html
@@ -180,7 +180,7 @@
         </div>
         
         <div class="pt-5 pb-5" style="background: #ECEDEF">
-            <img src="images/DS-look@2x.jpg" class="" style="max-width:100%; height: auto">
+            <img src="images/DS-Look@2x.jpg" class="" style="max-width:100%; height: auto">
         </div>
         
         <div class="px-5 pt-5" style="background: #ECEDEF">
